# nonsense

./: CMakeLists.txt  LICENSE
cmake/: config.cmake.in
include/: nonsense.h
src/: nonsense.cpp
